2002-12-16	fabian
    * Change version number to 0.5.6
    * Make author name localized strings in About panel.
    * Add a "Report a Bug" link in About panel.
    * Turn on the GREED_KEYDOWN flag in PTYTextView.m to allow special key
      to work when IM is turned on.
      
2002-12-14	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added popup button in toolbar for quick access to 
      addressbook entries.
      
    * Added missing OK button in AddressBook panel. 
      Was causing addressbook changes not to be saved.
    
    * Refactored addressbook code by introducing an 
      "executeABCommand:" method in MainMenu.
      

2002-12-11	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Made links to authors and web site in the About
      panel of the English NIB.


2002-12-11	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Removed keyDown code from PsudoTerminal. 
      First responder is TEXTVIEW.


2002-12-11	fabian
    * Changed/Added several shortcut keys:
      command-left and right arrow: pre/next session
      command-Fn: switch to n-th session
      
2002-12-10	fabian
    * Rewritten all the encoding related code. Now all 
      the encodings that are available on the system will 
      be usable.
      (Note, the local settings file will have to be 
       manually updated)
    * Fixed a few inconsistencies in the interface about 
      transparency
    * Fixed a bug that make user unable to open a new 
      window from quick run and address book panel.
    * Now the version number is 0.5.5

2002-12-08	fabian
    * fixed a bug that causes crash when a ended session 
      is manually closed
    * now a warning panel will pop out when you try to 
      close an active session
    * session button uses gray to suggest the session has 
      ended, and session name is enclosed in []
    * fixed a bug in screenSizeInFrame() in VT100Screen.m,
      which makes row/col smaller than it should be
      (this one need more test)
      